testsuite/poke.pkl/eq-any-diag-1.pk
/* { dg-do compile } */

fun equalstructs = (any a, any b) int:
  {
    return a == b; /* { dg-error "invalid operands" } */
  }
